# api/event/event.pb.validate.go
@@ -3114,107 +3114,3 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = PaginationValidationError{}
-
-// Validate checks the field values on IsPublishedResponse with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *IsPublishedResponse) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on IsPublishedResponse with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// IsPublishedResponseMultiError, or nil if none found.
-func (m *IsPublishedResponse) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *IsPublishedResponse) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for IsPublished
-
-	if len(errors) > 0 {
-		return IsPublishedResponseMultiError(errors)
-	}
-
-	return nil
-}
-
-// IsPublishedResponseMultiError is an error wrapping multiple validation
-// errors returned by IsPublishedResponse.ValidateAll() if the designated
-// constraints aren't met.
-type IsPublishedResponseMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m IsPublishedResponseMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m IsPublishedResponseMultiError) AllErrors() []error { return m }
-
-// IsPublishedResponseValidationError is the validation error returned by
-// IsPublishedResponse.Validate if the designated constraints aren't met.
-type IsPublishedResponseValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e IsPublishedResponseValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e IsPublishedResponseValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e IsPublishedResponseValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e IsPublishedResponseValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e IsPublishedResponseValidationError) ErrorName() string {
-	return "IsPublishedResponseValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e IsPublishedResponseValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sIsPublishedResponse.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = IsPublishedResponseValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = IsPublishedResponseValidationError{}
